--- a/templates/signinpage.html
+++ b/templates/signinpage.html
@@ -72,6 +72,7 @@
             <div class="form-group">
                 <button type="submit">Sign In</button>
             </div>
+            <a href="/">Main Page</a>
         </form>
     </div>
 </body>
