--- a/templates/signinpage.html
+++ b/templates/signinpage.html
@@ -55,6 +55,10 @@
         .form-group button:hover {
             background-color: #0056b3;
         }
+        .signup-link {
+            text-align: center;
+            margin-top: 15px;
+        }
     </style>
 </head>
 <body>
@@ -80,7 +84,9 @@
             <div class="form-group">
                 <button type="submit">Sign In</button>
             </div>
-			<a href="/">Main Page</a>
+			<div class="signup-link">
+                <p>Already have an account? <a href="/login">Log in here</a></p>
+            </div>
         </form>
     </div>
 </body>
